--- a/static/index.html
+++ b/static/index.html
@@ -8,6 +8,7 @@
 <div id="content">
   Hello
 </div>
+<a href="hello/yep">hey, it's a template</a>
 <script src="jquery-3.1.1.min.js"></script>
 <script src="main.js"></script>
 </body>
