--- a/static/index.html
+++ b/static/index.html
@@ -9,6 +9,10 @@
   Hello
 </div>
 <a href="hello/yep">hey, it's a template</a>
+<form method="post" action="/api/setup">
+  <input type="text" name="somename">
+  <button type="submit">send</button>
+</form>
 <script src="jquery-3.1.1.min.js"></script>
 <script src="main.js"></script>
 </body>
